unpackaged/objects/System_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Logo_Id__c</fullName>
        <defaultValue>&apos;0159E000000LLH4&apos;</defaultValue>
        <label>Logo Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <defaultValue>&apos;00D9E0000001AAl&apos;</defaultValue>
        <label>Org Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_URL_Contact_List_View__c</fullName>
        <label>Portal_URL_Contact_List_View</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Refresh_Frequency_Scheduled_Job__c</fullName>
        <defaultValue>6</defaultValue>
        <description>Every X months scheduled job &quot;&apos;InfoCheck Partner Admin&quot; will run</description>
        <label>Refresh_Frequency_Scheduled_Job</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>System_Settings</label>
</CustomObject>